# pushkind-approve4

./: build.sh  docker-compose.mysql.yml  docker-compose.yml
.github/: deploy.yml
event-service/: Dockerfile  app.db  boot.sh  config.py  consumer.py  deploy.sh  requirements.txt  run.py
frontend/: Dockerfile  config.py  consumer.py  pyproject.toml  requirements.txt
frontend/app/: __init__.py  producer.py  utils.py
frontend/app/api/: entity.py  event.py  hub.py  order.py  project.py  tender.py  user.py
frontend/app/auth/: forms.py  routes.py
frontend/app/errors/: handlers.py
frontend/app/main/: __init__.py  forms.py  routes_admin.py  routes_approve.py  routes_help.py  routes_history.py  routes_index.py  routes_limits.py  routes_products.py  routes_settings.py  routes_shop.py  routes_tenders.py  utils.py
frontend/app/static/js/: pagination.js  shoppingCart.js
frontend/app/static/upload/: tenders.xlsx
frontend/app/templates/: _event.html  _limit.html  _order.html  _order.status.html  _product.html  _selectize.html  _user.html  _user.popover.html  _user.settings.form.html  admin.html  approve.html  base.html  help.html  history.html  index.html  limits.html  navigation.html  select.html  settings.html  shop_cart.html  shop_categories.html  shop_products.html  stores.html  tenders.html  vendors.html
frontend/app/templates/auth/: login.html
frontend/app/templates/email/: comment.html  comment.txt  new.html  new.txt  registered.html  registered.txt  support.html
frontend/app/templates/errors/: 400.html  403.html  404.html  413.html  500.html  503.html
(+52 files in other folders)
