[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Viacheslav Matrizaev <matrizaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mysql-connector-python = "^8.0.32"
mysqlclient = "^2.1.1"
gunicorn = "^20.1.0"
flask = "^2.2.3"
gevent = "^22.10.2"
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.3"
flask-mail = "^0.9.1"
sqlalchemy = "^2.0.4"
python-dotenv = "^0.21.1"
pyjwt = "^2.6.0"
flask-httpauth = "^4.7.0"
pytest = "^7.2.1"
pika = "^1.3.1"
flask-login = "^0.6.2"
flask-wtf = "^1.1.1"
email-validator = "^1.3.1"
openpyxl = "^3.1.1"
requests = "^2.28.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
